# AnimateLib

./: CMakeLists.txt
animate-lib/: CMakeLists.txt
animate-lib/source/: TypeTraits.h  type_traits.h
animate-lib/source/Animate/: TypeTraits.h
animate-lib/source/Animate/Assets/: Bitmap.cpp  Bitmap.h  MediaAsset.h  SymDependCache.cpp  SymDependCache.h
animate-lib/source/Animate/Document/: LibraryController.cpp  LibraryController.h  SketchDocument.cpp  SketchDocument.h
animate-lib/source/Animate/Effects/: GlowEffect.cpp  GlowEffect.h  GraphicEffect.cpp  GraphicEffect.h
animate-lib/source/Animate/Math/: ColorTransform.h
animate-lib/source/Animate/Pic/: PicBitmap.cpp  PicBitmap.h  PicFrame.cpp  PicFrame.h  PicGroup.cpp  PicGroup.h  PicIterator.h  PicLayer.cpp  PicLayer.h  PicObject.cpp  PicObject.h  PicPage.cpp  PicPage.h  PicRect.cpp  PicRect.h  PicShape.cpp  PicShape.h  PicSymbol.cpp  PicSymbol.h  PicText.cpp  PicText.h
animate-lib/source/Animate/Text/: Style.h
animate-lib/source/Animate/XFL/: File.cpp  File.h  IoFile.cpp  IoFile.h  SerizalizeTraits.h  Writer.cpp  Writer.h
animate-lib/source/Assets/: Bitmap.cpp  Bitmap.h  MediaAsset.h
animate-lib/source/Document/: LibraryController.cpp  LibraryController.h  SketchDocument.cpp  SketchDocument.h
animate-lib/source/Pic/: PicBitmap.cpp  PicBitmap.h  PicFrame.cpp  PicFrame.h  PicLayer.cpp  PicLayer.h  PicObject.cpp  PicObject.h  PicPage.cpp  PicPage.h
animate-lib/source/XFL/: File.cpp  File.h  IoFile.cpp  IoFile.h  Writer.cpp  Writer.h
cmake/: core.cmake  (+3 more)
tool/: CMakeLists.txt
tool/source/: main.cpp
(+66 files in other folders)
